# finval

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: SPEC_0.4.0.md
examples/: quickstart.py
src/finval/: __init__.py  validate.py
src/finval/baselines/: __init__.py  gaussian.py  historical.py
src/finval/core/: __init__.py  bootstrap.py  cpcv.py  result.py  thresholds.py
src/finval/metrics/: __init__.py  backtest.py  calibration.py  conditional.py  dependence.py  distribution.py  generative.py  joint.py  paths.py  stylized.py  tail_dynamics.py  temporal.py
tests/: conftest.py  test_against_baselines.py  test_backtest.py  test_baselines.py  test_calibration.py  test_conditional.py  test_dependence.py  test_distribution.py  test_full.py  test_generative.py  test_hill_and_sliced_wasserstein.py  test_joint.py  test_paths.py  test_stylized.py  test_subwindow.py  test_tail_dynamics.py  test_temporal.py  test_validate.py
tools/: calibrate.py
